--- a/css/styles.css
+++ b/css/styles.css
@@ -507,7 +507,7 @@ padding: 12px 24px;
 color: #FFFFFF;
 background: var(--pseudoclass-clr);
 box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
-border: none;
+border-color: var(--pseudoclass-clr);
 }
 
 .portfolio-list {
